--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="pt-BR">
 
   <head>
-  <limk rel="stylesheet"
+  <limk rel="stylesheet" herf="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
